--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ a:hover {
   vertical-align: middle;
 }
 .register p.submit {
-  text-align: right;
+  text-align: center;
 }
 
 .register-help {
